--- a/src/layouts/components/sections/PricingSection.astro
+++ b/src/layouts/components/sections/PricingSection.astro
@@ -30,7 +30,7 @@ const { title, subtitle, plans, list, heading, description, ai_automations } =
     </div>
   </div>
 
-  <div class="container space-y-12 md:space-y-16">
+  <div class="container space-y-9 md:space-y-12">
     <!-- Title & Subtitle -->
     <div class="mx-auto max-w-2xl space-y-5 text-center">
       {subtitle && <Subtitle content={subtitle} />}
@@ -100,7 +100,7 @@ const { title, subtitle, plans, list, heading, description, ai_automations } =
         {ai_automations.title}
       </h3>
 
-      <p class="mx-auto max-w-xl text-base opacity-80">
+      <p class="mx-auto max-w-xl text-base text-white/88">
         {ai_automations.subtitle}
       </p>
 
