--- a/src/layouts/components/global/header/MenuItem.astro
+++ b/src/layouts/components/global/header/MenuItem.astro
@@ -7,11 +7,17 @@ const { pathname } = Astro.url;
 
 {
   menu.name && (
-    <li class="nav-item" role="menuitem">
+    <li
+      class:list={[
+        "nav-item",
+        { "nav-item-cta": menu.action === "openContactModal" },
+      ]}
+      role="menuitem">
       <a
         href={menu.action ? "#" : menu.url || "#"}
         class:list={[
           "nav-link text-text-default font-bold uppercase",
+          { "nav-link-cta": menu.action === "openContactModal" },
           { "nav-link-active": pathname === menu.url },
         ]}
         data-menu-action={menu.action || null}>
@@ -47,7 +53,10 @@ const { pathname } = Astro.url;
     navLinks.forEach((link) => {
       link.addEventListener("click", (e) => {
         const a = link as HTMLAnchorElement;
-        if (a.getAttribute("href") === "/" && window.location.pathname === "/") {
+        if (
+          a.getAttribute("href") === "/" &&
+          window.location.pathname === "/"
+        ) {
           e.preventDefault();
           window.scrollTo({ top: 0, behavior: "smooth" });
         }
